<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_body_color">


    <include layout="@layout/head"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_middle"
        android:layout_marginBottom="@dimen/margin_middle"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/good"
                android:gravity="center"
                android:textSize="@dimen/text_size_18"
                android:textColor="@color/text_black_color"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_middle"
                android:src="@drawable/buttom_icon"/>

        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/bg_line_color"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distace"
                android:textSize="@dimen/text_size_18"
                android:textColor="@color/text_black_color"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_middle"
                android:src="@drawable/buttom_icon"/>
        </LinearLayout>

        <TextView
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/bg_line_color"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allshop"
                android:textSize="@dimen/text_size_18"
                android:textColor="@color/text_black_color"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_middle"
                android:src="@drawable/buttom_icon"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/bg_line_color"/>

    <com.handmark.pulltorefresh.library.PullToRefreshListView
                    android:id="@+id/good_listview"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:cacheColorHint="@android:color/transparent"
                    android:divider="@color/bg_line_color"
                    android:dividerHeight="1dp"
                    android:fadingEdge="none"
                    android:fastScrollEnabled="false"
                    android:footerDividersEnabled="false"
                    android:headerDividersEnabled="false"
                    android:listSelector="#00000000"
                    android:scrollbars="none"
                    android:scrollingCache="false"
                    android:smoothScrollbar="true" >
     </com.handmark.pulltorefresh.library.PullToRefreshListView>

</LinearLayout>