<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_body_color">
    <include layout="@layout/head"/>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:src="@drawable/test2"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_middle"
        android:paddingBottom="@dimen/margin_middle"
        android:paddingTop="@dimen/margin_middle"
        android:background="@color/bg_mainbody_color"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="龙湾大酒店"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/text_black_color"
            android:layout_marginRight="@dimen/margin_middle"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_middle"
            android:src="@drawable/v_icon"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/wai"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_middle"
        android:background="@color/bg_mainbody_color"
        android:layout_marginBottom="@dimen/margin_middle"
        android:paddingBottom="@dimen/margin_middle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="人均："
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_gray_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="120元"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_gray_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="营业时间："
            android:textColor="@color/text_gray_color"
            android:textSize="@dimen/text_size_16"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10:00-21:00"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_gray_color"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_middle"
        android:background="@color/bg_mainbody_color"
        android:paddingTop="@dimen/margin_middle"
        android:paddingBottom="@dimen/margin_middle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_black_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="人民路22号"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_black_color"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/bg_line_color"
        android:layout_marginLeft="@dimen/margin_middle"
        android:layout_marginRight="@dimen/margin_middle"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_middle"
        android:background="@color/bg_mainbody_color"
        android:paddingTop="@dimen/margin_middle"
        android:paddingBottom="@dimen/margin_middle"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_black_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="陈先生"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_black_color"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/bg_line_color"
        android:layout_marginLeft="@dimen/margin_middle"
        android:layout_marginRight="@dimen/margin_middle"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_middle"
        android:paddingTop="@dimen/margin_middle"
        android:paddingBottom="@dimen/margin_middle"
        android:background="@color/bg_mainbody_color"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobiephone"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_black_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="13122256664"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_black_color"/>
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/text_gray_color"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="@dimen/margin_middle"
        android:layout_marginBottom="@dimen/margin_middle"
        android:layout_marginLeft="@dimen/margin_middle"
        android:text="详情"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:padding="@dimen/margin_middle"
        android:background="@color/bg_mainbody_color"
        android:textColor="@color/text_black_color"
        android:textSize="@dimen/text_size_16"
        android:text="详是是是是是是是是是是是事实上是是是是是是是是是事实上是是是是是是是是是事实上是是是是是是是是是情"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_middle"
        android:gravity="bottom"
        android:background="@drawable/buttom_bg"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_middle"
            android:layout_marginBottom="@dimen/margin_middle"
            android:layout_height="wrap_content"
            android:id="@+id/phone_layout"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_middle"
                android:src="@drawable/phone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_18"
                android:textColor="@color/text_red_color"
                android:text="电话"/>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@color/bg_line_color"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_middle"
            android:layout_marginTop="@dimen/margin_middle"
            android:layout_marginBottom="@dimen/margin_middle"
            android:gravity="center"
            android:id="@+id/jubao_layout"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_middle"
                android:src="@drawable/jubao"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_18"
                android:textColor="@color/text_red_color"
                android:text="举报"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>